--- a/week4-review/index.html
+++ b/week4-review/index.html
@@ -3,10 +3,11 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
-    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/styles.css" href=""rel="stylesheet" type="text/css" media="all">
     <title>Kirstin Hartman</title>
   </head>
   <body>
+
     <nav class="navbar">
       <div class="container">
         <div class="navbar-header">
@@ -16,6 +17,7 @@
             <span class="icon-bar"></span>
           </button>
           <a id="brand" class="navbar-brand" href="index.htm.">The<strong> Fabric</strong> of our lives. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+
         </div>
 
 
@@ -43,6 +45,30 @@
     </div>
 
     <div class="container">
-      <h3 class="page-header">A glimpse into the life. <small>...of one girl...</small></h3>
-      <p>This is where I will put all my about me section.</p>
+      <h3 class="page-header">A glimpse... <small>into the life...</small></h3>
+
+        <div class="center-block">
+
+          <div class="my-class">
+            <img style="float: center" src="mountains.jpg" alt="Looking over the Tatoosh Mountain Range.">
+          </div>
+        </div>
+    </div>
+
+
+
+    <div class="container">
+      <div class="well">
+        <h1><strong><em>About me</em></strong>
+        <div class="h1">
+
+        </div>
+      </h1>
+
+        <p>Growing up in the foothills of Mount Rainier, I've always been an avid hiker.
+        Something about the solidtude of nature gave me a sense of sovereignty and independence.
+      I could be void of all worries or cares.
+        </p>
+
+      </div>
     </div>
