--- a/week4-review/index.html
+++ b/week4-review/index.html
@@ -16,7 +16,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a id="brand" class="navbar-brand" href="index.htm.">The<strong> Fabric</strong> of our lives. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+          <a id="b" class="navbar-brand" href="index.htm.">The<strong> Fabric</strong> of our lives. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 
         </div>
 
@@ -56,19 +56,89 @@
     </div>
 
 
-
     <div class="container">
-      <div class="well">
-        <h1><strong><em>About me</em></strong>
-        <div class="h1">
-
+      <div class="row">
+        <div class="panel">
+          <div class="panel-heading">
+            <h1 class=panel-title><em><strong>About Me</strong></em></h1>
+            <br><br><br><br>
+            <p>Growing up in the foothills of Mount Rainier, I've always been an avid hiker with a deep penchant for the outdoors. Something about the solidtude of nature gave me a sense of sovereignty and independence. I was a goat farmer for a good portion of my life until I graduated high school and felt a desire to move on to bigger, better things. Here are a few things about me that I've done and learned along the way.</p>
+          </div>
         </div>
-      </h1>
-
-        <p>Growing up in the foothills of Mount Rainier, I've always been an avid hiker.
-        Something about the solidtude of nature gave me a sense of sovereignty and independence.
-      I could be void of all worries or cares.
-        </p>
-
       </div>
     </div>
+
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="well">
+        <div class="panel">
+          <h2 class=panel-title>Education</h2>
+          <ul>
+            <li>Evergreen State College</li>
+            <li>Western Oregon University</li>
+            <li>Portland State University</li>
+            <li>Epicodus</li>
+          </ul>
+
+
+        </div>
+      </div>
+    </div>
+
+
+
+    <div class="col-md-4">
+      <div class="well">
+        <div class="panel">
+          <h2 class=panel-title>Hobbies</h2>
+          <ul>
+            <li>Hike</li>
+            <li>Walk my dog</li>
+            <li>Visit wine country</li>
+            <li>Fishing</li>
+          </ul>
+
+
+        </div>
+      </div>
+    </div>
+
+<div class="col-md-4">
+  <div class="well">
+    <div class="panel">
+      <h2 class=panel-title>Skills</h2>
+      <ol>
+        <li>Decision Making</li>
+        <li>Adaptability</li>
+        <li>Creativity</li>
+        <li>Conflict Resolution</li>
+
+      </ol>
+    </div>
+  </div>
+</div>
+
+<p>This is my rendition of a Wikipedia page. It's in progress, but you can get an idea of my level of learning over the past 4 weeks at Epicodus Click <a href="https://github.com/gonehiking8/wiki-2">here</a> to view.</p>
+
+<p>In week 2, I practiced branching. Here is an example of what I learned in this lesson.
+Click <a href="https://github.com/gonehiking8/Branching-Practice">here</a> to view.</p>
+
+<p>I practiced basic CSS utilization with added images in my version of a "Cupcakery".
+  Click <a href="https://github.com/gonehiking8/Cupcakery">here</a> to view.</p>
+
+<p>Feel free to contact <strong class="integrity">ME</strong>, at your convenience <a href="kirihartman8@gmail.com" class="important">email me</a> if you need anything.</p>
+
+
+
+
+  </div>
+
+</div>
+
+
+
+  </body>
+</html>
